// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List component test Test Dynamic container list output 1`] = `
<DynamicList
  elements={
    [
      {
        "cl": "(0) Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.",
        "iconImage": "data-blob.svg",
        "iconImage2": "add.svg",
        "id": "item0",
      },
      {
        "cl": "(1) Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.",
        "iconImage": "data-blob.svg",
        "iconImage2": "add.svg",
        "id": "item1",
      },
      {
        "cl": "(2) Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.",
        "iconImage": "data-blob.svg",
        "iconImage2": "add.svg",
        "id": "item2",
      },
      {
        "cl": "(3) Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.",
        "iconImage": "data-blob.svg",
        "iconImage2": "add.svg",
        "id": "item3",
      },
      {
        "cl": "(4) Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.",
        "iconImage": "data-blob.svg",
        "iconImage2": "add.svg",
        "id": "item4",
      },
      {
        "cl": "(5) Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.",
        "iconImage": "data-blob.svg",
        "iconImage2": "add.svg",
        "id": "item5",
      },
      {
        "cl": "(6) Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.",
        "iconImage": "data-blob.svg",
        "iconImage2": "add.svg",
        "id": "item6",
      },
      {
        "cl": "(7) Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.",
        "iconImage": "data-blob.svg",
        "iconImage2": "add.svg",
        "id": "item7",
      },
      {
        "cl": "(8) Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.",
        "iconImage": "data-blob.svg",
        "iconImage2": "add.svg",
        "id": "item8",
      },
      {
        "cl": "(9) Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.",
        "iconImage": "data-blob.svg",
        "iconImage2": "add.svg",
        "id": "item9",
      },
      {
        "cl": "(10) Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.",
        "iconImage": "data-blob.svg",
        "iconImage2": "add.svg",
        "id": "item10",
      },
      {
        "cl": "(11) Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.",
        "iconImage": "data-blob.svg",
        "iconImage2": "add.svg",
        "id": "item11",
      },
      {
        "cl": "(12) Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.",
        "iconImage": "data-blob.svg",
        "iconImage2": "add.svg",
        "id": "item12",
      },
      {
        "cl": "(13) Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.",
        "iconImage": "data-blob.svg",
        "iconImage2": "add.svg",
        "id": "item13",
      },
      {
        "cl": "(14) Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.",
        "iconImage": "data-blob.svg",
        "iconImage2": "add.svg",
        "id": "item14",
      },
      {
        "cl": "(15) Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.",
        "iconImage": "data-blob.svg",
        "iconImage2": "add.svg",
        "id": "item15",
      },
      {
        "cl": "(16) Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.",
        "iconImage": "data-blob.svg",
        "iconImage2": "add.svg",
        "id": "item16",
      },
      {
        "cl": "(17) Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.",
        "iconImage": "data-blob.svg",
        "iconImage2": "add.svg",
        "id": "item17",
      },
      {
        "cl": "(18) Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.",
        "iconImage": "data-blob.svg",
        "iconImage2": "add.svg",
        "id": "item18",
      },
      {
        "cl": "(19) Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.",
        "iconImage": "data-blob.svg",
        "iconImage2": "add.svg",
        "id": "item19",
      },
    ]
  }
  height={300}
  id="list3"
  rowHeight={100}
  template={
    <Container
      className="verticalCenterContent"
      orientation="row"
    >
      <Image
        dataId="iconImage"
        disabled={false}
      />
      <Label
        dataId="cl"
      />
      <Container
        id="innerComplexContainer"
        orientation="column"
      >
        <Icon
          dataId="iconImage2"
          disabled={false}
        />
        <Icon
          dataId="iconImage2"
          disabled={false}
        />
      </Container>
    </Container>
  }
>
  <TreeGrid
    className="msg dynamicList"
    columns={
      [
        {
          "field": "id",
          "formatter": [Function],
          "title": "",
        },
      ]
    }
    height={300}
    id="list3"
    options={
      {
        "alternatingRowBackgrounds": false,
        "horizontalGridLines": false,
        "layout": "fitColumns",
        "selectionType": 1,
        "showHeader": false,
        "verticalGridLines": false,
      }
    }
    tableData={
      [
        {
          "cl": "(0) Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.",
          "iconImage": "data-blob.svg",
          "iconImage2": "add.svg",
          "id": "item0",
        },
        {
          "cl": "(1) Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.",
          "iconImage": "data-blob.svg",
          "iconImage2": "add.svg",
          "id": "item1",
        },
        {
          "cl": "(2) Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.",
          "iconImage": "data-blob.svg",
          "iconImage2": "add.svg",
          "id": "item2",
        },
        {
          "cl": "(3) Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.",
          "iconImage": "data-blob.svg",
          "iconImage2": "add.svg",
          "id": "item3",
        },
        {
          "cl": "(4) Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.",
          "iconImage": "data-blob.svg",
          "iconImage2": "add.svg",
          "id": "item4",
        },
        {
          "cl": "(5) Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.",
          "iconImage": "data-blob.svg",
          "iconImage2": "add.svg",
          "id": "item5",
        },
        {
          "cl": "(6) Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.",
          "iconImage": "data-blob.svg",
          "iconImage2": "add.svg",
          "id": "item6",
        },
        {
          "cl": "(7) Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.",
          "iconImage": "data-blob.svg",
          "iconImage2": "add.svg",
          "id": "item7",
        },
        {
          "cl": "(8) Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.",
          "iconImage": "data-blob.svg",
          "iconImage2": "add.svg",
          "id": "item8",
        },
        {
          "cl": "(9) Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.",
          "iconImage": "data-blob.svg",
          "iconImage2": "add.svg",
          "id": "item9",
        },
        {
          "cl": "(10) Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.",
          "iconImage": "data-blob.svg",
          "iconImage2": "add.svg",
          "id": "item10",
        },
        {
          "cl": "(11) Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.",
          "iconImage": "data-blob.svg",
          "iconImage2": "add.svg",
          "id": "item11",
        },
        {
          "cl": "(12) Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.",
          "iconImage": "data-blob.svg",
          "iconImage2": "add.svg",
          "id": "item12",
        },
        {
          "cl": "(13) Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.",
          "iconImage": "data-blob.svg",
          "iconImage2": "add.svg",
          "id": "item13",
        },
        {
          "cl": "(14) Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.",
          "iconImage": "data-blob.svg",
          "iconImage2": "add.svg",
          "id": "item14",
        },
        {
          "cl": "(15) Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.",
          "iconImage": "data-blob.svg",
          "iconImage2": "add.svg",
          "id": "item15",
        },
        {
          "cl": "(16) Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.",
          "iconImage": "data-blob.svg",
          "iconImage2": "add.svg",
          "id": "item16",
        },
        {
          "cl": "(17) Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.",
          "iconImage": "data-blob.svg",
          "iconImage2": "add.svg",
          "id": "item17",
        },
        {
          "cl": "(18) Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.",
          "iconImage": "data-blob.svg",
          "iconImage2": "add.svg",
          "id": "item18",
        },
        {
          "cl": "(19) Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.",
          "iconImage": "data-blob.svg",
          "iconImage2": "add.svg",
          "id": "item19",
        },
      ]
    }
  >
    <div
      className="msg treeGrid dynamicList"
      id="list3"
    />
  </TreeGrid>
</DynamicList>
`;

exports[`List component test Test Static container list output 1`] = `
<List
  crossAlignment="flex-start"
  elements={
    [
      {
        "cl": "Entry 1",
      },
      {
        "cl": "Entry 2",
      },
      {
        "cl": "Entry 3",
      },
      {
        "cl": "Entry 4",
      },
    ]
  }
  orientation="column"
  template={
    <Container
      className="verticalCenterContent"
      id="listContainer"
      orientation="row"
    >
      <Image
        disabled={false}
        id="img"
        src="data-blob.svg"
      />
      <Label
        dataId="cl"
        id="containerLabel1"
      />
      <Label
        dataId="cl"
        id="containerLabel2"
        style={
          {
            "color": "yellowgreen",
            "fontWeight": "800",
            "marginLeft": "12px",
          }
        }
      />
    </Container>
  }
>
  <ul
    className="msg list"
    crossAlignment="flex-start"
    orientation="column"
  >
    <li
      key="list0"
    >
      <Container
        className="verticalCenterContent"
        data={
          {
            "cl": "Entry 1",
          }
        }
        id="list0"
        key="list0"
        orientation="row"
      >
        <div
          className="msg container fixedScrollbar verticalCenterContent"
          data={
            {
              "cl": "Entry 1",
            }
          }
          id="list0"
          style={
            {
              "alignItems": undefined,
              "flexDirection": "row",
              "flexWrap": undefined,
              "justifyContent": undefined,
            }
          }
        >
          <Image
            data={
              {
                "cl": "Entry 1",
              }
            }
            disabled={false}
            id="img"
            src="data-blob.svg"
          >
            <img
              className="msg image"
              data={
                {
                  "cl": "Entry 1",
                }
              }
              id="img"
              src="data-blob.svg"
            />
          </Image>
          <Label
            data={
              {
                "cl": "Entry 1",
              }
            }
            dataId="cl"
            id="containerLabel1"
          >
            <label
              className="msg label"
              data={
                {
                  "cl": "Entry 1",
                }
              }
              data-tooltip="expand"
              dataId="cl"
              id="containerLabel1"
              style={{}}
            />
          </Label>
          <Label
            data={
              {
                "cl": "Entry 1",
              }
            }
            dataId="cl"
            id="containerLabel2"
            style={
              {
                "color": "yellowgreen",
                "fontWeight": "800",
                "marginLeft": "12px",
              }
            }
          >
            <label
              className="msg label"
              data={
                {
                  "cl": "Entry 1",
                }
              }
              data-tooltip="expand"
              dataId="cl"
              id="containerLabel2"
              style={
                {
                  "color": "yellowgreen",
                  "fontWeight": "800",
                  "marginLeft": "12px",
                }
              }
            />
          </Label>
        </div>
      </Container>
    </li>
    <li
      key="list1"
    >
      <Container
        className="verticalCenterContent"
        data={
          {
            "cl": "Entry 2",
          }
        }
        id="list1"
        key="list1"
        orientation="row"
      >
        <div
          className="msg container fixedScrollbar verticalCenterContent"
          data={
            {
              "cl": "Entry 2",
            }
          }
          id="list1"
          style={
            {
              "alignItems": undefined,
              "flexDirection": "row",
              "flexWrap": undefined,
              "justifyContent": undefined,
            }
          }
        >
          <Image
            data={
              {
                "cl": "Entry 2",
              }
            }
            disabled={false}
            id="img"
            src="data-blob.svg"
          >
            <img
              className="msg image"
              data={
                {
                  "cl": "Entry 2",
                }
              }
              id="img"
              src="data-blob.svg"
            />
          </Image>
          <Label
            data={
              {
                "cl": "Entry 2",
              }
            }
            dataId="cl"
            id="containerLabel1"
          >
            <label
              className="msg label"
              data={
                {
                  "cl": "Entry 2",
                }
              }
              data-tooltip="expand"
              dataId="cl"
              id="containerLabel1"
              style={{}}
            />
          </Label>
          <Label
            data={
              {
                "cl": "Entry 2",
              }
            }
            dataId="cl"
            id="containerLabel2"
            style={
              {
                "color": "yellowgreen",
                "fontWeight": "800",
                "marginLeft": "12px",
              }
            }
          >
            <label
              className="msg label"
              data={
                {
                  "cl": "Entry 2",
                }
              }
              data-tooltip="expand"
              dataId="cl"
              id="containerLabel2"
              style={
                {
                  "color": "yellowgreen",
                  "fontWeight": "800",
                  "marginLeft": "12px",
                }
              }
            />
          </Label>
        </div>
      </Container>
    </li>
    <li
      key="list2"
    >
      <Container
        className="verticalCenterContent"
        data={
          {
            "cl": "Entry 3",
          }
        }
        id="list2"
        key="list2"
        orientation="row"
      >
        <div
          className="msg container fixedScrollbar verticalCenterContent"
          data={
            {
              "cl": "Entry 3",
            }
          }
          id="list2"
          style={
            {
              "alignItems": undefined,
              "flexDirection": "row",
              "flexWrap": undefined,
              "justifyContent": undefined,
            }
          }
        >
          <Image
            data={
              {
                "cl": "Entry 3",
              }
            }
            disabled={false}
            id="img"
            src="data-blob.svg"
          >
            <img
              className="msg image"
              data={
                {
                  "cl": "Entry 3",
                }
              }
              id="img"
              src="data-blob.svg"
            />
          </Image>
          <Label
            data={
              {
                "cl": "Entry 3",
              }
            }
            dataId="cl"
            id="containerLabel1"
          >
            <label
              className="msg label"
              data={
                {
                  "cl": "Entry 3",
                }
              }
              data-tooltip="expand"
              dataId="cl"
              id="containerLabel1"
              style={{}}
            />
          </Label>
          <Label
            data={
              {
                "cl": "Entry 3",
              }
            }
            dataId="cl"
            id="containerLabel2"
            style={
              {
                "color": "yellowgreen",
                "fontWeight": "800",
                "marginLeft": "12px",
              }
            }
          >
            <label
              className="msg label"
              data={
                {
                  "cl": "Entry 3",
                }
              }
              data-tooltip="expand"
              dataId="cl"
              id="containerLabel2"
              style={
                {
                  "color": "yellowgreen",
                  "fontWeight": "800",
                  "marginLeft": "12px",
                }
              }
            />
          </Label>
        </div>
      </Container>
    </li>
    <li
      key="list3"
    >
      <Container
        className="verticalCenterContent"
        data={
          {
            "cl": "Entry 4",
          }
        }
        id="list3"
        key="list3"
        orientation="row"
      >
        <div
          className="msg container fixedScrollbar verticalCenterContent"
          data={
            {
              "cl": "Entry 4",
            }
          }
          id="list3"
          style={
            {
              "alignItems": undefined,
              "flexDirection": "row",
              "flexWrap": undefined,
              "justifyContent": undefined,
            }
          }
        >
          <Image
            data={
              {
                "cl": "Entry 4",
              }
            }
            disabled={false}
            id="img"
            src="data-blob.svg"
          >
            <img
              className="msg image"
              data={
                {
                  "cl": "Entry 4",
                }
              }
              id="img"
              src="data-blob.svg"
            />
          </Image>
          <Label
            data={
              {
                "cl": "Entry 4",
              }
            }
            dataId="cl"
            id="containerLabel1"
          >
            <label
              className="msg label"
              data={
                {
                  "cl": "Entry 4",
                }
              }
              data-tooltip="expand"
              dataId="cl"
              id="containerLabel1"
              style={{}}
            />
          </Label>
          <Label
            data={
              {
                "cl": "Entry 4",
              }
            }
            dataId="cl"
            id="containerLabel2"
            style={
              {
                "color": "yellowgreen",
                "fontWeight": "800",
                "marginLeft": "12px",
              }
            }
          >
            <label
              className="msg label"
              data={
                {
                  "cl": "Entry 4",
                }
              }
              data-tooltip="expand"
              dataId="cl"
              id="containerLabel2"
              style={
                {
                  "color": "yellowgreen",
                  "fontWeight": "800",
                  "marginLeft": "12px",
                }
              }
            />
          </Label>
        </div>
      </Container>
    </li>
  </ul>
</List>
`;

exports[`List component test Test Static unordered list output 1`] = `
<List
  elements={
    [
      {
        "l": "Entry 1",
      },
      {
        "l": "Entry 2",
      },
      {
        "l": "Entry 3",
      },
      {
        "l": "Entry 4",
      },
    ]
  }
  template={
    <Label
      dataId="l"
    />
  }
>
  <ul
    className="msg list"
  >
    <li
      key="list0"
    >
      <Label
        data={
          {
            "l": "Entry 1",
          }
        }
        dataId="l"
        id="list0"
        key="list0"
      >
        <label
          className="msg label"
          data={
            {
              "l": "Entry 1",
            }
          }
          data-tooltip="expand"
          dataId="l"
          id="list0"
          style={{}}
        />
      </Label>
    </li>
    <li
      key="list1"
    >
      <Label
        data={
          {
            "l": "Entry 2",
          }
        }
        dataId="l"
        id="list1"
        key="list1"
      >
        <label
          className="msg label"
          data={
            {
              "l": "Entry 2",
            }
          }
          data-tooltip="expand"
          dataId="l"
          id="list1"
          style={{}}
        />
      </Label>
    </li>
    <li
      key="list2"
    >
      <Label
        data={
          {
            "l": "Entry 3",
          }
        }
        dataId="l"
        id="list2"
        key="list2"
      >
        <label
          className="msg label"
          data={
            {
              "l": "Entry 3",
            }
          }
          data-tooltip="expand"
          dataId="l"
          id="list2"
          style={{}}
        />
      </Label>
    </li>
    <li
      key="list3"
    >
      <Label
        data={
          {
            "l": "Entry 4",
          }
        }
        dataId="l"
        id="list3"
        key="list3"
      >
        <label
          className="msg label"
          data={
            {
              "l": "Entry 4",
            }
          }
          data-tooltip="expand"
          dataId="l"
          id="list3"
          style={{}}
        />
      </Label>
    </li>
  </ul>
</List>
`;
